frame/support/test/tests/derive_no_bound_ui/eq.stderr
error[E0277]: can't compare `Foo<T>` with `Foo<T>`
 --> tests/derive_no_bound_ui/eq.rs:6:8
  |
6 | struct Foo<T: Config> {
  |        ^^^^^^^^^^^^^^ no implementation for `Foo<T> == Foo<T>`
  |
  = help: the trait `PartialEq` is not implemented for `Foo<T>`
note: required by a bound in `std::cmp::Eq`
 --> /rustc/9eb3afe9ebe9c7d2b84b71002d44f4a0edac95e0/library/core/src/cmp.rs:283:1
